# Collab

./: .gitignore  README.md  Room.html  index.html  landing.html  package-lock.json  package.json  room-ui.html  theme.js
.claude/: launch.json
.github/workflows/: release-desktop.yml
apps/backend/: .dockerignore  DEPLOY.md  Dockerfile  docker-compose.yml  fly.toml  package-lock.json  package.json  tsconfig.json
apps/backend/src/: server.ts
apps/backend/src/lib/: auth.ts  cors.ts  state.ts
apps/backend/src/plugins/: yjs.ts
apps/backend/src/routes/: admin.ts  files.ts  rooms.ts
apps/backend/src/sockets/: handlers.ts
apps/desktop/: .gitignore  README.md  package-lock.json  package.json
apps/desktop/scripts/: build-sidecar.mjs
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitkeep
apps/desktop/src-tauri/icons/: .gitkeep  icon.icns
apps/desktop/src-tauri/src/: main.rs  network.rs  settings.rs  sidecar.rs  tray.rs
apps/frontend/: .env.example  .gitignore  README.md  ROOM_INTEGRATION.md  package-lock.json  package.json  svelte.config.js  vercel.json  vite.config.ts
apps/frontend/src/: app.css  app.html  service-worker.ts
apps/frontend/src/lib/: socket.ts  tauri.ts  yjs.ts  (+1 more)
apps/frontend/static/: manifest.webmanifest
docs/: AI-BACKEND-DEPLOY.md  ARCHITECTURE-COMPLETE.md  ARCHITECTURE.md  BUGS-2026-06-24.md  DEPLOY-QUICK.md  DEPLOY.md  GUIDE-UTILISATEUR-LAN.md  REVISION.md  SUIVI.md  TAURI-PLAN.md  TROUBLESHOOTING.md
docs/kairos/: KAIROS-SESSION-2026-06-13.md
scripts/: deploy.ps1  deploy.sh
(+43 files in other folders)
