[package]
name = "collab-desktop"
version = "1.0.0"
description = "Collab MVP desktop app"
authors = ["EXXOLAB Digital Agency"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
  "shell-open",
  "shell-sidecar",
  "window-close",
  "window-hide",
  "window-show",
  "window-set-focus",
  "window-set-title",
  "window-start-dragging",
  "system-tray",
  "notification-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-address = "0.6"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
